# bhesh

./: .gitignore  CMAKELists.cmake  CMakeLists.txt  LICENSE  README.md  TASKS.txt  build.sh  clean.sh  run.sh  run_valgrind.sh  test.txt
.cache/clangd/index/: bhesh.c.8603A92D563FAA37.idx  bhesh.h.42F6BAA30E405D91.idx  constants.h.03FF23DA84A5BC34.idx  datastructs.h.9FE3B00AFA6A2C96.idx  input.c.1D676C82A53DF4DB.idx  input.h.88B4D6F73328111A.idx  prompt.c.0A18547772ACA663.idx  prompt.h.69B2E8A6A6BDBB91.idx  shell.c.B8D3DE1D34D6A8C6.idx  shell_exec.c.AF7C4A1037DFF0F6.idx  shell_exec.h.7ABCEB278BEA6C1A.idx  utilities.c.0FBCE9BDC05785A6.idx  utilities.h.28441D59386C48EA.idx
include/: bhesh.h  constants.h  datastructs.h  input.h  operators.h  prompt.h  shell_exec.h  utilities.h
src/: bhesh.c  input.c  prompt.c  shell.c  shell_exec.c  utilities.c
